kuber/kbs/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: express-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: express

  template:
    metadata:
      labels:
        app: express

    spec:
      containers:
        - name: express-container
          image: cohort_2:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"

            limits:
              memory: "128Mi"
              cpu: "500m"
